# StatusbarLog

./: .gitignore  CMakeLists.txt  DoxyFile  DoxyFile_noComments.txt  Doxyfile  Doxyfile_noComments  README.md  RELEASES.md  compile_commands.json  compile_commands.json.linux  compile_commands.json.windows  package_project.ps1  package_project.sh
.github/workflows/: docs.yaml
docs/: cmake_module.md  license.md  mainpage.md
docs/example/: main.cc  main.cpp
include/: StatusbarLog.h
include/StatusbarLog/: StatusbarLog.h
include/statusbarlog/: sink.h  statusbarlog.h  statusbarlog.h.in
src/: StatusbarLog.cpp  main.cpp  sink.cc  statusbarlog.cc  statusbarlog.cpp
tests/: CMakeLists.txt
tests/include/: statusbarlog_test.h
tests/src/: StatusbarLog_main.cpp  StatusbarLog_test.cpp  statusbarlog_main.cc  statusbarlog_main.cpp  statusbarlog_test.cc  statusbarlog_test.cpp  statusbarlog_test_helpers.cc
